# hw2

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: main.yml  main.yml~e6f267b (Tests added for symbol class)
data/: README.md
docs/: conf.py  index.rst  src.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/src/: cli.html  cols.html  data.html  num.html  row.html  sym.html  test_engine.html  utils.html
src/: Data.py  Num.py  Row.py  Sym.py  app.py  cli.py  cols.py  data.py  hw2_tests.py  misc.py  num.py  row.py  sym.py  test_engine.py  utils.py
tests/: README.md
tests/unit/: test_calculator.py  test_data.py  test_num.py  test_sym.py  test_utils.py
