[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Aditya Tewari <adtewari@ncsu.edu>", "Naman Bhagat <nbhagat2@ncsu.edu>", "Ritwik Tiwari <rtiwari2@ncsu.edu>", "Saksham Thakur <sthakur5@ncsu.edu", "Shubhender Singh <ssingh54@ncsu.edu>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
isort = "^5.10.0"
black = "^22.6.0"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
